Fixed workout-log grid layout issues

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -127,7 +127,7 @@ a {
 
 #lift-log {
   display: grid;
-  grid-template-rows: 20% 1fr 10%;
+  grid-template-rows: 1fr 3fr 1fr;
   grid-column: 1 / 3;
   width: 80%;
   background: rgba(0, 0, 0, .1);
@@ -176,10 +176,11 @@ h2 {
 }
 
 #add-set-button {
-  height: 2em;
-  width: 2em;
+  height: 1.5em;
+  width: 1.5em;
   background: rgba(255, 255, 255, .1);
   justify-self: center;
+  align-self: end;
 }
 
 
