--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
 
 html, #root {
   height: 100%;
+  box-sizing: border-box;
 }
 
 code {
